add test 2 iss53

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>selenium_TestNG</name>
+	<name>selenium_TestNG_backup</name>
 	<comment></comment>
 	<projects>
 	</projects>
